--- a/style.css
+++ b/style.css
@@ -723,9 +723,9 @@ picture p {
         height: 100vh;
         left: -100vw;
         top:0;
-        background-color: rgba(34, 34, 34, 0.877);
         border: 0;
         border-radius: 0;
+        background-color: rgba(34, 34, 34, 0.877);
         display: grid;
         grid-template-columns: calc(100vw - 4rem) 4rem;
         grid-template-areas:
@@ -744,7 +744,6 @@ picture p {
 
     #mainNavigationRow nav > a i {
         margin: 1rem;
-        font-size: 2rem;
     }
 
     #mainNavigationRow nav ul {
@@ -795,7 +794,6 @@ picture p {
     #insertedBox table td,
     #insertedBox {
         border:0; 
-        font-size: min(3vw, 1em);
     }
     
     #insertedBox table caption {
@@ -811,7 +809,6 @@ picture p {
     /* start form */
     picture > p {
         text-align: start;
-        font-size: 1rem;
     }
     
     #insertedBox form {
@@ -842,7 +839,7 @@ picture p {
     }
 
     #insertedBox legend {
-        font-size: 1.4rem;
+        font-size: 1.5rem;
     }
     /* end form */
     
@@ -951,7 +948,7 @@ picture p {
         color: var(--blue);
     }
 
-    #cartInfo>div{
+    #cartInfo > div{
         grid-area: cart-item2;
         border-radius: 0;
         background-color: rgba(255, 255, 255, 0.973);
@@ -1018,6 +1015,7 @@ picture p {
     
     footer h4 {
         padding-bottom: 1rem;
+        font-size: 1.2rem;
     }
     footer > div {
         padding: 0;
@@ -1028,7 +1026,7 @@ picture p {
         row-gap: 1rem;
     }
 
-    .footer-item4 .input,
+    .footer-item4 .input-field,
     .footer-item4 button {
         padding: 1rem;
         border-radius: 0;
@@ -1089,17 +1087,21 @@ picture p {
         color: rgb(91, 91, 91);
     }
 
-    .footer-item5{
+    .footer-item5 {
         padding: 0.5rem;
         border-radius: 0;
         background-color: #3A3A3A;
-        font-size: min(2.5vw, 0.8rem);
         text-align: center;
         color: rgb(172, 172, 172);
     }
     
+    .footer-item5 p {
+        font-size: 0.8rem;
+    }
+
     .footer-item5 span {
         display: inline-block;
+        font-size: 0.8rem;
     }
     /*#################### end footer #######################################*/
 }
