--- a/style.css
+++ b/style.css
@@ -745,12 +745,12 @@ picture p {
         transition: left 0.5s ease-out;
     }
 
-    #mainNavigationRow nav > a i {
+    #navigationMain > a i {
         margin: 1rem;
         font-size: 2rem;
     }
 
-    #mainNavigationRow nav ul {
+    #navigationMain ul {
         grid-area: nav-item2;
         display: flex;
         flex-direction: column;
@@ -759,7 +759,7 @@ picture p {
 
     }
 
-    #mainNavigationRow nav ul::before {
+    #navigationMain ul::before {
         padding: 3rem 0 0 1rem;
         height: 14vw;
         content: "Art Store";
